--- a/main.html
+++ b/main.html
@@ -3,11 +3,29 @@
 <html>
 
 <head>
+	<caption style="text-align:center;"> Student Details</caption>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table BORDER="1"  bgcolor="yellow">
+		<tr>
+			<th>NAME</th>
+			<th>AGE</th>
+			<th>BRANCH</th>
+		</tr>
+		<tr>
+			<td>Shaw</td>
+			<td>20</td>
+			<td>CSE</td>
+		</tr>
+		<tr>
+			<td>Adil</td>
+			<td>21</td>
+			<td>ECE</td>
+		</tr>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
