--- a/main.html
+++ b/main.html
@@ -1,34 +1,33 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<caption style="text-align:center;"> Student Details</caption>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Student Details</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	<table BORDER="1"  bgcolor="yellow">
-		<tr>
-			<th>NAME</th>
-			<th>AGE</th>
-			<th>BRANCH</th>
-		</tr>
-		<tr>
-			<td>Shaw</td>
-			<td>20</td>
-			<td>CSE</td>
-		</tr>
-		<tr>
-			<td>Adil</td>
-			<td>21</td>
-			<td>ECE</td>
-		</tr>
-	</table>
-    <script type="text/javascript" src="./script.js">
-</script>
-
+  <table border="1px solid black" bgcolor="yellow">
+    <caption>Student Details</caption>
+    <thead>
+      <tr>
+        <th>NAME</th>
+        <th>AGE</th>
+        <th>BRANCH</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>SHAW</td>
+        <td>20</td>
+        <td>CSE</td>
+      </tr>
+      <tr>
+        <td>ADIL</td>
+        <td>21</td>
+        <td>ECE</td>
+      </tr>
+      <!-- Add more rows as needed -->
+    </tbody>
+  </table>
 </body>
-
 </html>
