--- a/main.html
+++ b/main.html
@@ -17,16 +17,15 @@
     </thead>
     <tbody>
       <tr>
-        <td>SHAW</td>
+        <td>Shaw</td>
         <td>20</td>
         <td>CSE</td>
       </tr>
       <tr>
-        <td>ADIL</td>
+        <td>Adil</td>
         <td>21</td>
         <td>ECE</td>
       </tr>
-      <!-- Add more rows as needed -->
     </tbody>
   </table>
 </body>
